fix: fix images overlapping nav

--- a/src/containers/List/list.component.scss
+++ b/src/containers/List/list.component.scss
@@ -17,6 +17,8 @@
     margin: 0 auto;
     overflow: hidden;
     width: 100%;
+    position: relative;
+    z-index: 5;
   }
 
   &__image {
