--- a/src/containers/SearchBar/search-bar.component.scss
+++ b/src/containers/SearchBar/search-bar.component.scss
@@ -6,4 +6,5 @@
   margin-bottom: 3em;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
